--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,26 @@
 services:
-  postgres:
+  app:
+    container_name: metafi_backend
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: onepad_backend_api:0.1.2
+    ports:
+      - '3001:3000'
+    environment:
+      TOKEN_VERIFY_DURATION_TIME: 86400
+      NODE_ENV: production
+      DB_NAME: metafi-lauchpad
+      DB_USER: postgres
+      DB_PASSWORD: postgres
+      DB_HOST: postgresdb
+      DB_PORT: 5432
+      JTW_PRIVATE_PATH_FILE: app/keys/auth.private.key
+      JTW_PUBLIC_PATH_FILE: app/keys/auth.public.key
+    volumes:
+      - .:/app
+    restart: unless-stopped
+  postgresdb:
     image: postgres
     ports:
       - 5432:5432
