--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - '3002:3000'
     environment:
       TOKEN_VERIFY_DURATION_TIME: 86400
+      MODE: dev
       NODE_ENV: production
       DB_NAME: metafi-lauchpad
       DB_USER: postgres
