--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,31 @@
 services:
-  app:
-    container_name: metafi_backend
-    build:
-      context: .
-      dockerfile: Dockerfile
-    image: onepad_backend_api:0.1.2
-    ports:
-      - '3002:3000'
-    environment:
-      TOKEN_VERIFY_DURATION_TIME: 86400
-      MODE: dev
-      NODE_ENV: production
-      DB_NAME: metafi-lauchpad
-      DB_USER: postgres
-      DB_PASSWORD: postgres
-      DB_HOST: postgresdb
-      DB_PORT: 5432
-      JTW_PRIVATE_PATH_FILE: app/keys/auth.private.key
-      JTW_PUBLIC_PATH_FILE: app/keys/auth.public.key
-    volumes:
-      - .:/app
-    restart: unless-stopped
+  # metafi-bridge-be:
+  #   container_name: metafi-bridge-be
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile
+  #   ports:
+  #     - '3002:3000'
+  #   environment:
+  #     TOKEN_VERIFY_DURATION_TIME: 86400
+  #     MODE: DEV
+  #     DB_NAME: metafi-bridge
+  #     DB_USER: postgres
+  #     DB_PASSWORD: postgres
+  #     DB_HOST: postgresdb
+  #     DB_PORT: 5432
+  #     JTW_PRIVATE_PATH_FILE: app/keys/auth.private.key
+  #     JTW_PUBLIC_PATH_FILE: app/keys/auth.public.key
+  #   volumes:
+  #     - .:/app
+  #   restart: unless-stopped
   postgresdb:
     image: postgres
     ports:
-      - 5432:5432
+      - 5433:5432
     volumes:
-      - ~/apps/postgres:/var/lib/postgresql/data
+      - ./postgres:/var/lib/postgresql/data
     environment:
       POSTGRES_PASSWORD: postgres
       POSTGRES_USER: postgres
-      POSTGRES_DB: metafi-lauchpad
+      POSTGRES_DB: metafi-bridge
