--- a/production/nestjs.docker-compose.yml
+++ b/production/nestjs.docker-compose.yml
@@ -8,16 +8,15 @@ services:
       - "80:3001"
     environment:
       NODE_ENV: production
-      DB_NAME: postgres
-      DB_USER: admin_onepad
-      DB_PASSWORD: mpWJq9k2x9gzBqJ9Mm0W87wmnXxb1ZaalBDD
+      DB_NAME: 
+      DB_USER: 
+      DB_PASSWORD: 
       DB_HOST: 152.42.240.49
       DB_PORT: 5432
       SOLAN_MODE: mainnet
       TOKEN_VERIFY_DURATION_TIME: 86400
       JTW_PRIVATE_PATH_FILE: app/auth.private.key
       JTW_PUBLIC_PATH_FILE: app/auth.public.key
-      SOLAN_RPC_MAINNET: https://mainnet.helius-rpc.com/?api-key=2133c0f2-a984-41f9-a7ba-00c422f0137d
     volumes:
       - .:/app
     restart: unless-stopped
