--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,9 @@
 services:
   app:
-    container_name: metafi_backend
+    container_name: metafi-lauchpad-be
     build:
       context: .
       dockerfile: Dockerfile
-    image: onepad_backend_api:0.1.2
     ports:
       - '3002:3000'
     environment:
