--- a/k8s/secret.yaml
+++ b/k8s/secret.yaml
@@ -5,6 +5,5 @@ metadata:
   namespace: metafi-system
 type: Opaque
 stringData:
-  POSTGRES_PASSWORD: postgres
-  POSTGRES_USER: postgres
-  POSTGRES_DB: metafi-lauchpad-dev
+  DB_USER: "postgres"
+  DB_PASSWORD: "postgres"
