--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -20,9 +20,9 @@ spec:
         - containerPort: 3000
         envFrom:
         - configMapRef:
-            name: launchpad-config
+            name: launchpad-config-map
         - secretRef:
-            name: enteral-kingdom-secrets
+            name: launchpad-secrets
         volumeMounts:
         - name: private-key-volume
           mountPath: /app/auth.private.pem
